// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Renders default layout 1`] = `
<View>
  <div
    style={
      Object {
        "display": "table",
        "height": 0,
        "overflow": "hidden",
        "paddingBottom": "66.66666666666667%",
      }
    }
  >
    <img
      alt=""
      src="http://example.com/image.jpg"
      style={
        Object {
          "display": "block",
          "position": "absolute",
          "width": "100%",
          "zIndex": 1,
        }
      }
    />
    <Placeholder
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 0,
        }
      }
    />
  </div>
</View>
`;

exports[`2. Renders default layout without uri 1`] = `
<View>
  <div
    style={
      Object {
        "display": "table",
        "height": 0,
        "overflow": "hidden",
        "paddingBottom": "66.66666666666667%",
      }
    }
  >
    <img
      alt=""
      src=""
      style={
        Object {
          "display": "block",
          "position": "absolute",
          "width": "100%",
          "zIndex": 1,
        }
      }
    />
    <Placeholder
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 0,
        }
      }
    />
  </div>
</View>
`;

exports[`3. Renders with a passed style prop 1`] = `
<View
  style={
    Object {
      "width": 100,
    }
  }
>
  <div
    style={
      Object {
        "display": "table",
        "height": 0,
        "overflow": "hidden",
        "paddingBottom": "66.66666666666667%",
      }
    }
  >
    <img
      alt=""
      src="http://example.com/image.jpg"
      style={
        Object {
          "display": "block",
          "position": "absolute",
          "width": "100%",
          "zIndex": 1,
        }
      }
    />
    <Placeholder
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 0,
        }
      }
    />
  </div>
</View>
`;

exports[`4. Renders a placeholder 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Gradient
    degrees={264}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Svg
        height={82.23350253807106}
        version="1.1"
        width={82.23350253807106}
      >
        <G
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="1"
        >
          <Path
            fill="#FFFFFF"
          />
        </G>
      </Svg>
    </View>
  </Gradient>
</View>
`;

exports[`Image tests on web ModalImage passes through to Image 1`] = `
<View>
  <div
    style={
      Object {
        "display": "table",
        "height": 0,
        "overflow": "hidden",
        "paddingBottom": "66.66666666666667%",
      }
    }
  >
    <img
      alt=""
      src="http://example.com/image.jpg"
      style={
        Object {
          "display": "block",
          "position": "absolute",
          "width": "100%",
          "zIndex": 1,
        }
      }
    />
    <Placeholder
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 0,
        }
      }
    />
  </div>
</View>
`;
